add JavaFX support and automatic MP3 playback to music player